emukhanovk8s/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment
  labels:
    app: sample-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
      service: web
      version: v2
  template:
    metadata:
      labels:
        app: sample-app
        service: web
        version: v2
    spec:
      containers:
      - name: web
        image: gitlab.akb-it.ru:4567/emukhanov/emukhanovk8s:stateful
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: regcred
